fix alignment

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -382,6 +382,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 100px;
   }
 
   .back {
@@ -847,6 +848,7 @@
 
   margin: 0 auto;
   width: 600px;
+  margin-top: 100px;
 }
 
 .review-form-label {
